--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
   {% else %}
+    <a href="/user/{{ session.username }}/profile/html">{{session.username}}</a> | 
     <a href="{{ url_for('logout') }}">log out</a>
   {% endif %}
   </div>
