completely templated poal, still layout probs

--- a/templates/groupprofile.html
+++ b/templates/groupprofile.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout1.html" %}
 {% block body %}
 	<h2>Group {{thegroup.fqgn}}</h2>
     <h3>Group Info</h3>
