--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,38 +3,38 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>ADS POAL</title>
 
-    <link rel="stylesheet" type="text/css" href="static/poal/external/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="static/poal/css/search-engine.css">
-    <script type="text/javascript" src="static/poal/external/underscore-min.js"></script>
-    <script src="static/poal/external/jquery/jquery-1.7.2.min.js"></script>
-    <script src="static/poal/external/jquery-ui-bootstrap/js/jquery-ui-1.8.16.custom.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/poal/external/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/poal/css/search-engine.css">
+    <script type="text/javascript" src="/static/poal/external/underscore-min.js"></script>
+    <script src="/static/poal/external/jquery/jquery-1.7.2.min.js"></script>
+    <script src="/static/poal/external/jquery-ui-bootstrap/js/jquery-ui-1.8.16.custom.min.js"></script>
     <!--script src="external/d3/d3.v2.min.js"></script-->
-    <link rel="stylesheet" type="text/css" href="static/poal/external/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.8.16.custom.css" />
-    <script type="text/javascript" src="static/poal/external/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="static/poal/external/sprintf.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/Core.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/AbstractManager.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/managers/Manager.jquery.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/Parameter.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/ParameterStore.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/ParameterHashStore.js"></script>
-    <script type="text/javascript" src="static/poal/js/ExtHashStore.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/AbstractWidget.js"></script>
-    <script type="text/javascript" src="static/poal/widgets/ResultWidget.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script>
-    <script type="text/javascript" src="static/poal/js/poal.theme.js"></script>
-    <script type="text/javascript" src="static/poal/js/jquery.livequery.js"></script>
-    <script type="text/javascript" src="static/poal/widgets/PagerWidget.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/core/AbstractFacetWidget.js"></script>
-    <script type="text/javascript" src="static/poal/widgets/CurrentSearchWidget.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/helpers/ajaxsolr.support.js"></script>
-    <script type="text/javascript" src="static/poal/ajax-solr/helpers/ajaxsolr.theme.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/poal/external/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.8.16.custom.css" />
+    <script type="text/javascript" src="/static/poal/external/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/poal/external/sprintf.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/Core.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/AbstractManager.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/managers/Manager.jquery.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/Parameter.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/ParameterStore.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/ParameterHashStore.js"></script>
+    <script type="text/javascript" src="/static/poal/js/ExtHashStore.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/AbstractWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/widgets/ResultWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script>
+    <script type="text/javascript" src="/static/poal/js/poal.theme.js"></script>
+    <script type="text/javascript" src="/static/poal/js/jquery.livequery.js"></script>
+    <script type="text/javascript" src="/static/poal/widgets/PagerWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/core/AbstractFacetWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/widgets/CurrentSearchWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/helpers/ajaxsolr.support.js"></script>
+    <script type="text/javascript" src="/static/poal/ajax-solr/helpers/ajaxsolr.theme.js"></script>
     <!--script type="text/javascript" src="ext/jquery-ui-1.8.1.custom.min.js"></script-->
-    <link rel="stylesheet" type="text/css" href="static/poal/external/jquery.autocomplete.css" media="screen"/>
-    <script type="text/javascript" src="static/poal/external/jquery.autocomplete.js"></script>
-    <script type="text/javascript" src="static/poal/widgets/AutocompleteWidget.js"></script>
-    <script type="text/javascript" src="static/poal/widgets/TagcloudWidget.js"></script>
-    <script type="text/javascript" src="static/poal/js/poal.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/poal/external/jquery.autocomplete.css" media="screen"/>
+    <script type="text/javascript" src="/static/poal/external/jquery.autocomplete.js"></script>
+    <script type="text/javascript" src="/static/poal/widgets/AutocompleteWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/widgets/TagcloudWidget.js"></script>
+    <script type="text/javascript" src="/static/poal/js/poal.js"></script>
 
 </head>
 <body>
@@ -42,26 +42,54 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <a class="brand logo" href="#" style="padding: 5px; padding-left: 40px;">
-                    <img src="images/adslogo_labs.jpg" alt="" height="40" width="133" />
+                    <img src="/static/poal/images/adslogo_labs.jpg" alt="" height="40" width="133" />
                 </a>
                 <form id="search" class="form-search search-fixed navbar-form">
                     <input type="text" id="query" class="input-medium search-query search-input">
                     <button type="submit" class="btn">Search</button>
                 </form>
-                <p class="navbar-txt pull-right">
+                <ul class="nav pull-right"> 
+                  <li class="divider-vertical"></li>
+                  <li class=""><a href="#">Advanced</a></li>
+                  <li class="divider-vertical"></li>
+                  <li class=""><a href="#">Saved</a></li>
+                  <li class="divider-vertical"></li>
                   {% if not session.logged_in %}
-                    <a href="{{ url_for('login') }}">log in</a>
+                  <li>
+                        <a href="{{ url_for('login') }}">log in</a>
+                  </li>
                   {% else %}
-                    <a href="/user/{{ session.username }}/profile/html">{{session.username}}</a> | 
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="user">{{session.username}}
+                    <b class="caret"></b> 
+                    </a>
+                    <ul id="usermenu" class="dropdown-menu"> 
+                      <li><a href="/user/{{ session.username }}/profile/html">Profile</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#">Saved</a></li>
+                      <li><a href="#">MyADS</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#addgroupdiv">New Collaboration</a></li>
+                      <li class="nav-header"><a href="#">Collaborations</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#addappdiv">Add/Create Application</a></li>
+                      <li class="nav-header"><a href="#">Applications</a></li>                   
+                    </ul>
+                  </li>
+                  <li class="divider-vertical"></li>
+                  <li>
                     <a href="{{ url_for('logout') }}">log out</a>
+                  </li>
                   {% endif %}
-                </p>
+                  </li>
+                  <li class="divider-vertical"></li>
+                  <li class=""><a href="#">Help</a></li>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row-fluid row">
-          {% block body %}{% endblock %}
+          {% block layoutbody %}{% endblock %}
         </div>
     </div><!--/.fluid-container-->
 
@@ -69,7 +97,7 @@
 </body>
 </html>
 
-<div class=page>
+<!--div class=page>
   <h1>ADSGUT</h1>
   <div class=metanav>
   {% if not session.logged_in %}
@@ -83,4 +111,4 @@
     <div class=flash>{{ message }}</div>
   {% endfor %}
   
-</div>
+</div-->
