--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout1.html" %}
 {% block body %}
     <h2>User {{theuser.nick}}</h2>
     <h3>User Info</h3>
