prelim support for tags, added memory based testing, removed item fk from tag as groups and apps dont have it, not sure about this as what does posting a tag to a group now mean if it is shown of its item

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <a class="brand logo" href="#" style="padding: 5px; padding-left: 40px;">
-                    <img src="/static/poal/images/adslogo_labs.jpg" alt="" height="40" width="133" />
+                    <img src="/static/poal/images/adslogo_labs.jpg" alt="ADS Labs" height="36"/>
                 </a>
                 <form id="search" class="form-search search-fixed navbar-form">
                     <input type="text" id="query" class="input-medium search-query search-input">
