trying to add inline form on side of breadcrumb

--- a/templates/poal.html
+++ b/templates/poal.html
@@ -29,6 +29,12 @@
         <div id="navigation" class="pagination">
           <ul id="pager"></ul>
         </div>
+            <!--form class="well form-inline">
+                <label class="checkbox">
+                    <input type="checkbox"> Select all
+                </label>
+            <button type="submit" class="btn">Sign in</button>
+            </form-->
          <div id="pager-header"></div>
         <div id="docs"></div>
     </div>
