--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <!--script src="external/d3/d3.v2.min.js"></script-->
     <link rel="stylesheet" type="text/css" href="/static/poal/external/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.8.16.custom.css" />
     <script type="text/javascript" src="/static/poal/external/bootstrap/js/bootstrap.min.js"></script>
+    {% if poal %}
     <script type="text/javascript" src="/static/poal/external/sprintf.js"></script>
     <script type="text/javascript" src="/static/poal/ajax-solr/core/Core.js"></script>
     <script type="text/javascript" src="/static/poal/ajax-solr/core/AbstractManager.js"></script>
@@ -35,38 +36,53 @@
     <script type="text/javascript" src="/static/poal/widgets/AutocompleteWidget.js"></script>
     <script type="text/javascript" src="/static/poal/widgets/TagcloudWidget.js"></script>
     <script type="text/javascript" src="/static/poal/js/poal.js"></script>
-
+    {% endif %}
 </head>
 <body>
   <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a class="brand logo" href="#" style="padding: 5px; padding-left: 40px;">
-                    <img src="/static/poal/images/adslogo_labs.jpg" alt="ADS Labs" height="36"/>
+                <a class="brand logo" href="/" style="padding: 5px;">
+                <img src="/static/poal/images/adslogo_labs.jpg" alt="ADS Labs" height="36"/>
+                  <span  style='padding-left: 20px;'>ADS Labs</span>
                 </a>
+                {% if not suppressed %}
                 <form id="search" class="form-search search-fixed navbar-form">
                     <input type="text" id="query" class="input-medium search-query search-input">
                     <button type="submit" class="btn">Search</button>
                 </form>
+                {% endif %}
                 <ul class="nav pull-right"> 
                   <li class="divider-vertical"></li>
-                  <li class=""><a href="#">Advanced</a></li>
-                  <li class="divider-vertical"></li>
-                  <li class=""><a href="#">Saved</a></li>
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Searches
+                    <b class="caret"></b> 
+                    </a>
+                    <ul id="usermenu" class="dropdown-menu"> 
+                      <li><a href="/poal">Explore</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#">Citation</a></li>
+                      <li><a href="#">Full Text</a></li>
+                      <li class="divider"></li>
+                      <li><a href="/poal">Advanced</a></li>                   
+                    </ul>
+                  </li>
                   <li class="divider-vertical"></li>
                   {% if not session.logged_in %}
                   <li>
-                        <a href="{{ url_for('login') }}">log in</a>
+                        <a href="{{ url_for('login') }}" id="user" user="none">log in</a>
                   </li>
                   {% else %}
+                  <li class=""><a href="/user/{{session.username}}/items/html">Saved</a></li>
+                  <li class="divider-vertical"></li>
                   <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="user">{{session.username}}
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="user" user="{{session.username}}">{{session.username}}
                     <b class="caret"></b> 
                     </a>
                     <ul id="usermenu" class="dropdown-menu"> 
                       <li><a href="/user/{{ session.username }}/profile/html">Profile</a></li>
                       <li class="divider"></li>
-                      <li><a href="#">Saved</a></li>
+                      <li><a href="/user/{{session.username}}/items/html">Saved</a></li>
                       <li><a href="#">MyADS</a></li>
                       <li class="divider"></li>
                       <li><a href="#addgroupdiv">New Collaboration</a></li>
